k8s/network/allow-api-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-postgres
  namespace: app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: api

  policyTypes:
  - Egress

  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: postgres
    ports:
    - protocol: TCP
      port: 5432
